--- a/durer/index1106.html
+++ b/durer/index1106.html
@@ -167,11 +167,6 @@
           line-height: 50.1px;
         }
 
-        h1 .special {
-          font-size: 32px;
-          line-height: 32px;
-        }
-
         h2, .number {
           font-size: 19.3px;
           line-height: 25.8px;
@@ -270,41 +265,44 @@
         </nav>
     </menu>
 
+    <p class="number">1</p>
 
-    <h1 class="special">AI tools</h1>
+    <h1>AI tools</h1>
+    <h2>created by engineers using machine learning models</h2>
+    <p>Engineers train these models and tune them to perform a range of tasks, starting with mere help in content editing and reaching all the way to the generation of creative content using a request in plain English language or even a photo reference.</p>
+    <p>You can try new wallpapers for your bedroom without ever leaving the house, create emojis inspired by your own selfie—or even train AI to mimic Slavoj Žižek in conversations. Every day, hundreds of AI projects are published.</p>
+    <p>However, only engineers can use this tech to create AI-powered projects.</p>
 
-    <h2>We make Dürer so that anyone can create their projects with AI algorithms</h2>
+    <p class="number">2</p>
+    <h1>Dürer bridges the gap</h1>
+    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI&nbsp;technology for a&nbsp;content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering</h2>
+    <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each&nbsp;other.</p>
 
-    <h2>People train AI models</h2>
-    <p>and tune them to perform a range of tasks, starting with mere help in content editing and reaching all the way to the generation of creative content using a request in plain English language or even a photo reference. However, only engineers can use this tech to create AI-powered projects</p>
-
-    <h2>Dürer bridges the gap</h2>
-    <p>between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering</p>
-
-    <h2>We are building a community </h2>
-    <p>of enthusiasts so that they can share their creations and learn from each other. Join our community to share, use and create your own AI tools</p>
+    <p class="number">3</p>
+    <h1>We believe</h1>
+    <h2>that in the future, not only engineers will be able to train AI</h2>
+    <p>We make Dürer so that anyone can create their own projects with AI&nbsp;algorithms</p>
 
     <h1 class="spacer">Join our community</h1>
     <h2>to share, use and create your own AI&nbsp;tools</h2>
 
     <div>
-      <h2>Train a model</h2>
-      <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lack good enough training references for your particular task.</p>
-      <p>To create your AI project and overcome the limitations of current algorithms, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools— join our community, share your idea, and we will find someone to help.</a></p>
-      <a href="#" class="button">Submit an idea</a>
-    </div>
-
-    <div>
       <h2>Share your project</h2>
-      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it to us.</p>
-      <a href="#" class="button">Share a project</a>
+      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring.</p>
+      <p>If you know of any that we don’t feature—or want to share yours—<a href="mailto:tonia@durer.ai">send it&nbsp;to&nbsp;us.</a></p>
+      <a href="#" class="button">CTA</a>
     </div>
 
     <div>
-      <h2>Help others</h2>
-      <p>We believe that everyone should have access to AI. At the moment, this technology can be used only by those who have tech skills. If you do and want to help others join our team of volunteers. </p>
-      <p>Together we will help people with creative ideas to train and tune AI algorithms and create amazing projects.</p>
-      <a href="#" class="button">Join as a volunteer</a>
+      <h2>Train a model</h2>
+      <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
+      <a href="#" class="button">CTA</a>
+    </div>
+
+    <div>
+      <h2>Join community</h2>
+      <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—<a href="https://discord.gg/H3pkyyuk">join our Discord</a> community, and we will try&nbsp;to&nbsp;help.</p>
+      <a href="#" class="button">CTA</a>
     </div>
 
     <footer>&copy; Durer Ai LTD · UK · 2022</footer>
