--- a/durer/index.html
+++ b/durer/index.html
@@ -117,11 +117,12 @@
       }
 
       .button {
-        display: block;
+        display: inline-block;
         padding: 8px 24px;
         background-color: #445E83;
         color: white;
         border-radius: 24px;
+        text-decoration: none;
       }
 
       @media screen and (min-width: 0px) {
