--- a/durer/index.html
+++ b/durer/index.html
@@ -118,6 +118,7 @@
 
       .button {
         display: inline-block;
+        margin-top: 24px;
         padding: 8px 24px;
         background-color: #445E83;
         color: white;
