--- a/durer/index.html
+++ b/durer/index.html
@@ -212,6 +212,11 @@
           line-height: 66.8px;
         }
 
+        h1 .special {
+          font-size: 48px;
+          line-height: 48px;
+        }
+
         h2, .number {
           font-size: 25.8px;
           line-height: 38.6px;
@@ -273,7 +278,7 @@
     </menu>
 
 
-    <h1 class="special">AI tools</h1>
+    <h1 class="special">In the future not only engineers will be able to train AI</h1>
 
     <h2>We make Dürer so that anyone can create their projects with AI algorithms</h2>
 
