--- a/durer/index.html
+++ b/durer/index.html
@@ -169,7 +169,7 @@
           line-height: 50.1px;
         }
 
-        h1 .special {
+        .special {
           font-size: 32px;
           line-height: 32px;
         }
@@ -212,7 +212,7 @@
           line-height: 66.8px;
         }
 
-        h1 .special {
+        .special {
           font-size: 48px;
           line-height: 48px;
         }
