--- a/durer/index.html
+++ b/durer/index.html
@@ -112,8 +112,13 @@
         font-family: "ABC Social Extended Medium";
       }
 
-      h1, h3, p {
+      h1, h3 {
         margin-top: 24px;
+      }
+
+      p {
+        margin-top: 8px;
+        margin-bottom: 16px;
       }
 
       .button {
