--- a/durer/index.html
+++ b/durer/index.html
@@ -283,7 +283,7 @@
     </menu>
 
 
-    <h1 class="special">In the future not only engineers will be able to train AI</h1>
+    <h1 class="special">In the future not only engineers will&nbsp;be&nbsp;able to&nbsp;train&nbsp;AI</h1>
 
     <h2>We make Dürer so that anyone can create their projects with AI algorithms</h2>
 
@@ -294,7 +294,8 @@
     <p>between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering</p>
 
     <h2>We are building a community </h2>
-    <p>of enthusiasts so that they can share their creations and learn from each other. Join our community to share, use and create your own AI tools</p>
+    <p>of enthusiasts so that they can share their creations and learn from each other.</p>
+    <p>Join our community to share, use and create your own AI tools</p>
 
     <h1 class="spacer">Join our community</h1>
     <h2>to share, use and create your own AI&nbsp;tools</h2>
