--- a/durer/index.html
+++ b/durer/index.html
@@ -304,20 +304,20 @@
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lack good enough training references for your particular task.</p>
       <p>To create your AI project and overcome the limitations of current algorithms, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools— join our community, share your idea, and we will find someone to help.</a></p>
-      <a href="#" class="button">Submit an idea</a>
+      <a href="https://discord.gg/H3pkyyuk" class="button">Submit an idea</a>
     </div>
 
     <div>
       <h2>Share your project</h2>
       <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it to us.</p>
-      <a href="#" class="button">Share a project</a>
+      <a href="https://discord.gg/H3pkyyuk" class="button">Share a project</a>
     </div>
 
     <div>
       <h2>Help others</h2>
       <p>We believe that everyone should have access to AI. At the moment, this technology can be used only by those who have tech skills. If you do and want to help others join our team of volunteers. </p>
       <p>Together we will help people with creative ideas to train and tune AI algorithms and create amazing projects.</p>
-      <a href="#" class="button">Join as a volunteer</a>
+      <a href="https://discord.gg/H3pkyyuk" class="button">Join as a volunteer</a>
     </div>
 
     <footer>&copy; Durer Ai LTD · UK · 2022</footer>
