--- a/durer/index.html
+++ b/durer/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dürer</title>
+    <title>Dürer.ai</title>
+
+    <meta property="og:title" content="Dürer.ai" />
+    <meta property="og:description" content="Dürer.ai is a place where you can create AI tools and share them with others" />
+
+
     <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-000923-6e7e11e6965089bb40cd05db8c04507d.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
@@ -294,8 +299,7 @@
     <p>between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering</p>
 
     <h2>We are building a community </h2>
-    <p>of enthusiasts so that they can share their creations and learn from each other.</p>
-    <p>Join our community to share, use and create your own AI tools</p>
+    <p>of enthusiasts so that they can share their creations and learn from each other Join&nbsp;our&nbsp;community&nbsp;to&nbsp;share, use and create your own AI tools</p>
 
     <h1 class="spacer">Join our community</h1>
     <h2>to share, use and create your own AI&nbsp;tools</h2>
