--- a/durer/index.html
+++ b/durer/index.html
@@ -6,8 +6,8 @@
 
     <title>Dürer.ai</title>
 
-    <meta property="og:title" content="Dürer.ai" />
-    <meta property="og:description" content="Dürer.ai is a place where you can create AI tools and share them with others" />
+    <meta property="og:title" content="Dürer" />
+    <meta property="og:description" content="Marketplace for AI tools and concepts. Place where you can create AI tools and share them with others" />
 
 
     <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-000923-6e7e11e6965089bb40cd05db8c04507d.css" type="text/css"/>
