--- a/durer/index.html
+++ b/durer/index.html
@@ -136,6 +136,14 @@
         text-decoration: none;
       }
 
+      .button a:hover {
+        background-color: #3E73BD;
+      }
+
+      .button a:active {
+        background-color: #2B4063;
+      }
+
       @media screen and (min-width: 0px) {
 
         .desktop {
