--- a/durer/index.html
+++ b/durer/index.html
@@ -138,10 +138,12 @@
 
       .button a:hover {
         background-color: #3E73BD;
+        color: white;
       }
 
       .button a:active {
         background-color: #2B4063;
+        color: white;
       }
 
       @media screen and (min-width: 0px) {
